fixing project resume spacing

--- a/projects.css
+++ b/projects.css
@@ -6,8 +6,7 @@
 }
 
 .project-intro{
-  height: 20vh;
-  padding: 20px;
+  padding: 20px 20px 20px 0;
 }
 
 .project-modal{
